fix(help styling): align right and clear up borders [TECH-1335]

--- a/src/context-selection/contextual-help-sidebar/cell.module.css
+++ b/src/context-selection/contextual-help-sidebar/cell.module.css
@@ -1,5 +1,6 @@
 .cell {
     composes: dataEntryCell from '../../data-workspace/data-entry-cell/data-entry-cell.module.css';
+    border: none;
 }
 
 .cellInnerWrapper {
@@ -7,11 +8,9 @@
 }
 
 .input {
-    composes: input from '../../data-workspace/data-entry-cell/data-entry-cell.module.css';
-}
-
-.inputDisabled {
-    background: var(--colors-grey300);
+    composes: densePadding from '../../data-workspace/inputs/inputs.module.css';
+    composes: alignToEnd from '../../data-workspace/inputs/inputs.module.css';
+    outline: 1px solid var(--colors-grey400);
 }
 
 .inputInvalid {
@@ -20,6 +19,11 @@
 
 .inputSynced {
     composes: synced from '../../data-workspace/data-entry-cell/data-entry-cell.module.css';
+}
+
+.inputLocked {
+    composes: locked from '../../data-workspace/data-entry-cell/data-entry-cell.module.css';
+    cursor: not-allowed;
 }
 
 .topRightIndicator {
